--- a/assets/css/indicateur.css
+++ b/assets/css/indicateur.css
@@ -4,4 +4,17 @@
     height:100px;
     width:100px;
     border:2px solid #679403;
+
+}
+.indicateur{
+    display: flex;
+}
+
+.indicateur:nth-child(4n){
+    color: #FF0000;
+}
+
+/*solution de jeanne !!*/
+.indicateur li:nth-child(0n+4), li:nth-child(0n+7), li:nth-child(0n+12){
+background: red;
 }
